# fincap-document-pipeline

./: .gitignore  README.md
mortgage-extractor/: DESIGN.md  OPERABILITY.md  README.md  pyproject.toml
mortgage-extractor/fixtures/: .gitkeep
mortgage-extractor/src/fincap/: __init__.py  assembler.py  audit.py  cli.py  config.py  models.py  pipeline.py  reconciler.py  review.py
mortgage-extractor/src/fincap/ingestion/: renderer.py  validator.py
mortgage-extractor/src/fincap/llm/: client.py  extractor.py  vision_reader.py
