[project]
name = "mortgage-extractor"
version = "0.1.0"
description = "Mortgage document extraction pipeline Phase 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf",
    "openai",
    "python-dotenv",
    "typer",
    "pydantic",
]

[project.scripts]
fincap = "fincap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fincap"]
